src/objects/Customer_Invoice__c.object
<CustomObject>
    <description>Object to keep information about customer invoice.</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account Id</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Invoices</relationshipLabel>
        <relationshipName>Customer_Invoices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Name__c</fullName>
        <description>Bank Account Name</description>
        <label>Bank Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <description>Bank Name</description>
        <label>Bank Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_Member_Accounting_Code__c</fullName>
        <description>Billed Member Accounting Code</description>
        <label>Billed Member Accounting Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_Member_Designator_Code__c</fullName>
        <description>Billed Member Designator Code</description>
        <label>Billed Member Designator Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_Member_Name__c</fullName>
        <description>Billed Member Name</description>
        <label>Billed Member Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <description>Branch Code</description>
        <label>Branch Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Agreement_Indicator__c</fullName>
        <description>CH Agreement Indicator</description>
        <label>CH Agreement Indicator</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Category__c</fullName>
        <description>Charge Category</description>
        <label>Charge Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clearance_Currency__c</fullName>
        <description>Clearance Currency</description>
        <label>Clearance Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <description>Currency Code</description>
        <label>Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Date Basis</description>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Due_Date__c</fullName>
        <description>Discount Due Date</description>
        <label>Discount Due Date</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Due_Days__c</fullName>
        <description>Discount Due Days</description>
        <label>Discount Due Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <description>Discount Percent</description>
        <label>Discount Percent</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <description>Exchange Rate</description>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Codes__c</fullName>
        <description>Fee Codes</description>
        <label>Fee Codes</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <description>IBAN</description>
        <label>IBAN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Invoice Date</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_ID__c</fullName>
        <description>Invoice ID</description>
        <label>Invoice ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Invoice Number</description>
        <label>Invoice Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <description>Invoice Status</description>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Due_Date__c</fullName>
        <description>Net Due Date</description>
        <label>Net Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Status_Billed_Member__c</fullName>
        <description>Payment Status Billed Member</description>
        <label>Payment Status Billed Member</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status_Billing_Member__c</fullName>
        <description>Payment Status Billing Member</description>
        <label>Payment Status Billing Member</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Type__c</fullName>
        <description>Payment Terms Type</description>
        <label>Payment Terms Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWIFT__c</fullName>
        <description>SWIFT</description>
        <label>SWIFT</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Settlement_Method__c</fullName>
        <description>Settlement Method</description>
        <label>Settlement Method</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Settlement_Month_Period__c</fullName>
        <description>Settlement Month Period</description>
        <label>Settlement Month Period</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>Total Amount</description>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>Transaction Type</description>
        <label>Transaction Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Service__c</fullName>
        <description>Type Of Service</description>
        <label>Type Of Service</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Customer Invoice</label>
    <nameField>
        <label>Customer Invoices Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Invoices</pluralLabel>
    <recordTypes>
        <fullName>SIS_Invoicing_information</fullName>
        <active>true</active>
        <label>SIS Invoicing information</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>